--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "navatic",
+  "name": "nonet",
   "version": "1.0.0",
   "description": "No description",
   "main": "index.js",
   "scripts": {
-	"prestart": "npm install",
-	"start": "node index.js"
-  },  
+    "prestart": "npm install",
+    "start": "node index.js"
+  },
   "keywords": [
     "swagger"
   ],
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
+    "async-file": "^2.0.2",
+    "await-fs": "^1.0.0",
+    "body-parser": "^1.18.2",
     "connect": "^3.2.0",
+    "cors": "^2.8.4",
+    "dateformat": "^3.0.3",
+    "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "js-yaml": "^3.3.0",
+    "jsonwebtoken": "^8.2.0",
+    "mellat-checkout": "^0.2.1",
+    "mellat-payment": "^1.0.0",
+    "moment-jalaali": "^0.7.2",
+    "mongoose": "^5.0.8",
+    "mongoose-type-url": "^1.0.2",
+    "payir": "^1.0.0",
+    "request": "^2.83.0",
+    "shortid": "^2.2.8",
+    "soap": "^0.23.0",
     "swagger-tools": "0.10.1"
   }
 }
